# GEOGL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Dependencies/Crypto/: CMakeLists.txt  crc32.cpp  keccak.cpp  md5.cpp  sha1.cpp  sha256.cpp  sha3.cpp
Dependencies/ImGui-1.81/: CMakeLists.txt  imgui_demo.cpp
Dependencies/imgui-docking/: CMakeLists.txt  imconfig.h  imgui.cpp
Dependencies/imgui-docking/.github/: issue_template.md
Dependencies/imgui-docking/docs/: BACKENDS.md  CHANGELOG.txt  EXAMPLES.md
Dependencies/imgui-docking/include/ImGui/: imconfig.h  imgui.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
Engine/Source/: CMakeLists.txt
Engine/Source/GEOGL/: CMakeLists.txt
Engine/Source/GEOGL/Application/: Application.cpp  Application.hpp
Engine/Source/GEOGL/IO/: CameraController.cpp  CameraController.hpp  Input.hpp  Window.cpp  Window.hpp
Engine/Source/GEOGL/IO/Events/: MouseEvent.hpp
Engine/Source/GEOGL/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Engine/Source/GEOGL/Layers/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
Engine/Source/GEOGL/Rendering/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  SubTexture2D.cpp  SubTexture2D.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
Engine/Source/GEOGL/include/GEOGL/: Core.hpp  GEOGL.hpp  MainCreator.hpp  Renderer.hpp
Engine/Source/Platform/GLFW/: CMakeLists.txt
Engine/Source/Platform/GLFW/IO/: GLFWInput.cpp  GLFWInput.hpp  GLFWKeyCodes.cpp  GLFWWindow.cpp
Engine/Source/Platform/OpenGL/: CMakeLists.txt
Engine/Source/Platform/OpenGL/Rendering/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLGraphicsContext.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Engine/Source/Platform/Vulkan/: CMakeLists.txt
Engine/Source/Platform/Vulkan/Rendering/: VulkanGraphicsContext.hpp  VulkanRendererAPI.cpp
Engine/Source/Platform/Vulkan/VulkanExtensionsAndCallabacks/: VulkanCallbacks.cpp  VulkanExtensions.hpp
Engine/Source/Utils/: CMakeLists.txt  Callbacks.cpp  InputCodesConverter.hpp  Settings.cpp
Engine/Source/Utils/Headers/: Dependencies.hpp  PCH.hpp  Refs.hpp
Engine/Source/Utils/Logging/: PrivateLog.hpp  PublicLog.hpp
Engine/Source/Utils/Memory/: Pointers.hpp  TrackMemoryAllocations.cpp  TrackMemoryAllocations.hpp
Engine/Source/Utils/Timing/: Timer.cpp  Timer.hpp
Engine/Source/Utils/include/GEOGL/: Dependencies.hpp
Engine/Tests/: CMakeLists.txt  TestMain.cpp
Engine/Tests/TestComponents/: CMakeLists.txt
Engine/Tests/TestComponents/Catch2Test/: CMakeLists.txt  Catch2Test.cpp
Engine/Tests/TestComponents/SharedPtr/: CMakeLists.txt  SharedPtrTest.cpp
Engine/Tests/TestComponents/UniquePtr/: CMakeLists.txt  UniquePtrTest.cpp
Projects/Example2DGame/: 2DGame.cpp  2DGame.hpp  2DGameApplication.cpp  2DGameApplication.hpp  CMakeLists.txt  DebugLayer.cpp  DebugLayer.hpp  GameLayer.cpp  GameLayer.hpp
Projects/Example2DGame/Icons/: imageIcon.rc
Projects/Example2DGame/PCH/: PCH.cpp  PCH.hpp
Projects/GEOGL-Editor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.hpp  GEOGLEditorApp.cpp  GEOGLEditorApp.hpp
Projects/GEOGL-Editor/PCH/: PCH.hpp
Projects/Sandbox/: CMakeLists.txt  DebugLayer.cpp  DebugLayer.hpp  Layer2D.cpp  Layer2D.hpp  ParticleSystem.cpp  ParticleSystem.hpp  SandboxApp.cpp  SandboxApp.hpp
Projects/Sandbox/Icons/: imageIcon.rc
Source/Example/: 3DLayer.cpp  3DLayer.hpp  CMakeLists.txt  ExampleApplication.cpp  ExampleApplication.hpp  SandboxApplication.cpp  SandboxApplication.hpp  TwoDLayer.cpp  TwoDLayer.hpp  main.cpp
Source/GEOGL/: CMakeLists.txt  Win32Exports.hpp
Source/GEOGL/Application/: Application.cpp  Application.hpp
Source/GEOGL/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Source/GEOGL/IO/: CameraController.cpp  CameraController.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp
Source/GEOGL/IO/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Source/GEOGL/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Source/GEOGL/Layers/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
Source/GEOGL/Logging/: LoggingFunctions.cpp  PrivateLog.hpp  PublicLog.hpp
Source/GEOGL/ModelComponents/: RawModel.cpp  RawModel.hpp
Source/GEOGL/Modules/Platform/: CMakeLists.txt
Source/GEOGL/Modules/Utils/: APIManagement.cpp  APIManagement.hpp  CMakeLists.txt  InputCodesConverter.cpp  InputCodesConverter.hpp  Settings.cpp  Settings.hpp  Win32Exports.hpp
Source/GEOGL/Platform/: CMakeLists.txt
Source/GEOGL/Platform/OpenGL/: CMakeLists.txt  OpenGLCompileTest.cpp  OpenGLCompileTest.hpp  OpenGLInput.cpp  OpenGLInput.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Source/GEOGL/Platform/Vulkan/: CMakeLists.txt
Source/GEOGL/Rendering/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsInstance.cpp  GraphicsInstance.hpp  Layer.cpp  Layer.hpp  LayerStack.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  VertexArray.cpp  VertexArray.hpp  Window.cpp  Window.hpp
Source/GEOGL/Utils/: APIManagment.cpp  APIManagment.hpp  CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  CallbacksPrivate.hpp  InputCodes.hpp  InputCodesConverter.cpp  InputCodesConverter.hpp  KeyCodes.hpp  Loader.cpp  Loader.hpp  MouseCodes.hpp  PCH.hpp  Settings.cpp  Settings.hpp
Source/GEOGL/Utils/Headers/: Dependencies.hpp  PCH.cpp  PCH.hpp
Source/GEOGL/include/GEOGL/: Core.hpp  Events.hpp  GEOGL.hpp  IO.hpp  Layers.hpp  MainCreator.hpp  Renderer.hpp
Source/Vulkan_Example/: CMakeLists.txt  VulkanExampleApp.cpp  VulkanExampleApp.hpp
Source/Vulkan_Example/PCH/: PCH.cpp  PCH.hpp
(+159 files in other folders)
